src/objects/Game__c.object
<CustomObject>
    <fields>
        <fullName>FirstCompetitorAccept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FirstCompetitorAccept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstCompetitorScore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>First Competitor Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstCompetitor__c</fullName>
        <label>FirstCompetitor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondCompetitorAccept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SecondCompetitorAccept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondCompetitorScore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Second Competitor Score</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondCompetitor__c</fullName>
        <label>SecondCompetitor</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Stage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tournament__c</fullName>
        <label>Tournament</label>
        <referenceTo>Tournament__c</referenceTo>
        <relationshipLabel>Games</relationshipLabel>
        <relationshipName>Games</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WinningGroup__c</fullName>
        <defaultValue>true</defaultValue>
        <label>WinningGroup</label>
        <type>Checkbox</type>
    </fields>
    <label>Game</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Game Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>